--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "db-migrate": "supabase migration up && npm run db-types",
     "db-types": "supabase gen types typescript --local > supabase/types.ts",
     "db-pull": "supabase db remote commit",
-    "db-push": "supabase db push",
-    "test": "jest"
+    "db-push": "supabase db push"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.18.0",
