--- a/.github/workflows/swa.yml
+++ b/.github/workflows/swa.yml
@@ -12,6 +12,12 @@ on:
       - bug/*
 
 jobs:
+  downloadnode:
+      steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 18
   build_and_deploy_job:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
